Update executive files from gatling bundle